--- a/server/package.json
+++ b/server/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "01.Furniture",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "lite-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "lit-html": "^1.3.0",
-    "lite-server": "^2.6.1",
-    "page": "^1.11.6"
+    "bcrypt": "^5.1.0",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.3"
   }
 }
